[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/tower/trophy.png" type="Texture" id=1]
[ext_resource path="res://sprites/font/PixulBrush.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Game Play/Challenge/Result.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 2 )

[node name="Result" type="Node2D"]
script = ExtResource( 3 )

[node name="Trophy" type="TextureRect" parent="."]
margin_left = 469.0
margin_top = 256.0
margin_right = 585.0
margin_bottom = 352.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="."]
margin_left = 446.0
margin_top = 360.0
margin_right = 609.0
margin_bottom = 501.0
custom_fonts/font = SubResource( 1 )
text = "name
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 304.0
margin_top = 445.0
margin_right = 493.0
margin_bottom = 514.0
custom_fonts/font = SubResource( 2 )
text = "10/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="."]
margin_left = 304.0
margin_top = 532.0
margin_right = 452.0
margin_bottom = 601.0
custom_fonts/font = SubResource( 3 )
text = "150s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinnerLabel" type="Label" parent="."]
margin_left = 408.0
margin_top = 622.0
margin_right = 634.0
margin_bottom = 691.0
custom_fonts/font = SubResource( 4 )
text = "winner!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
